--- a/extra/index.html
+++ b/extra/index.html
@@ -7,12 +7,7 @@
 		<title>ToDoList</title>
         <script src="https://kit.fontawesome.com/de0c154c79.js" crossorigin="anonymous"></script>
 		<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
-			crossorigin="anonymous"
-		/>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
 		<link rel="stylesheet" href="./css/style.css" />
 	</head>
 	<body>
@@ -34,8 +29,7 @@
 								id="inputPassword"
 								placeholder="Nuova cosa da fare..."
 								v-model="inputValue"
-                                
-							/>
+                                />
 						</div>
 						<div class="col-auto">
 							<button @click="addTask" class="btn btn-primary">Aggiungi</button>
@@ -45,7 +39,7 @@
 				<div class="container">
 					<div class="card">
 						<ul class="list-group list-group-flush">
-							<li @click="saluta" v-for="(task,index) in tasks" class="list-group-item" :class="(task.done === true ? 'text-decoration-line-through' : '')">
+							<li @click="toggle(task)" v-for="(task, index) in tasks" class="list-group-item" :class="(task.done === true ? 'text-decoration-line-through' : '')">
 								<i @click="removeTask(index)" class="fa-solid fa-trash text-danger fs-3"></i>
 							{{task.text}}</li>
 						</ul>
@@ -53,7 +47,6 @@
 				</div>
 			</section>
 		</div>
-
 		<script src="./js/app.js"></script>
 	</body>
 </html>
