--- a/extra/index.html
+++ b/extra/index.html
@@ -47,6 +47,6 @@
 				</div>
 			</section>
 		</div>
-		<script src="./js/app.js"></script>
+		<script src="js/app.js"></script>
 	</body>
 </html>
