--- a/extra/index.html
+++ b/extra/index.html
@@ -9,17 +9,18 @@
 		<script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
 		<link rel="stylesheet" href="./css/style.css" />
+		<link rel="icon" type="image/x-icon" href="img/Logo.png">
 	</head>
 	<body>
 		<div id="app">
 			<header>
 				<nav class="navbar navbar-light bg-white">
-					<div class="container-fluid">
+					<div class="container-fluid justify-content-start">
 						<a class="navbar-brand" href="#">
 							<img src="img/Logo.png" alt=""
 								class="d-inline-block align-text-top">
-							<span class="fs-2">Tobolist</span>
-						</a>
+							</a>
+							<p class="fs-1">Tobolist</p>
 					</div>
 				</nav>
 			</header>
@@ -38,16 +39,17 @@
 								/>
 						</div>
 						<div class="col-auto">
-							<button @click="addTask" class="btn btn-primary">Add Task</button>
+							<button  class="btn btn-primary">Add Section</button>
+							<button @click="addTask" class="btn btn-primary mx-3">Add Task</button>
 						</div>
 					</div>
 				</div>
 				<div class="container  bg-white py-4 my-1 rounded-bottom-2">
-					<div class="card">
-						<ul class="list-group list-group-flush">
-							<li @click="toggle(task)" v-for="(task, index) in tasks" class="list-group-item" :class="(task.done === true ? 'text-decoration-line-through' : '')">
+					<div class="card border-0">
+						<ul class="list-group list-group-flush  border-0">
+							<li @click="toggle(task)" v-for="(task, index) in tasks" class="list-group-item " :class="(task.done === true ? 'text-decoration-line-through' : '')">
 								<i @click="removeTask(index)" class="fa-solid fa-trash text-danger fs-3"></i>
-							{{task.text}}</li>
+							{{task.text}} </li>
 						</ul>
 					</div>
 				</div>
